--- a/ScreenlyManager.csproj
+++ b/ScreenlyManager.csproj
@@ -96,6 +96,9 @@
     <Compile Include="AddOrChangeAssetPage.xaml.cs">
       <DependentUpon>AddOrChangeAssetPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AddOrChangeDevicePage.xaml.cs">
+      <DependentUpon>AddOrChangeDevicePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -165,6 +168,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="AddOrChangeAssetPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddOrChangeDevicePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
