Changes on add asset page + localization support (fr-FR and en-EN)

--- a/ScreenlyManager.csproj
+++ b/ScreenlyManager.csproj
@@ -91,6 +91,8 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
+    <PRIResource Include="Strings\fr-FR\Resources.resw" />
+    <PRIResource Include="Strings\en-US\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddOrChangeAssetPage.xaml.cs">
